redsentir/deployment/postgres-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-deployment
  namespace: redsentir
  labels:
    app: postgres
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
        volumes:
        - name: postgres-pv
          persistentVolumeClaim:
            claimName: postgres-pvc
        containers:
            - name: db
              image: postgres:11
              ports:
                - containerPort: 5432
              volumeMounts:
                - mountPath: /var/lib/postgresql/data
                  name: postgres-pv
