redsentir/deployment/postgres-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgres-svc
  namespace: redsentir
spec:
  type: NodePort
  selector:
      app: postgres
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
    nodePort: 32358
