redsentir/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-ingress-class: public
  name: redsentir-ingress
  namespace: redsentir
spec:
  ingressClassName: public
  rules:
  - host: redsentir.agapanto.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redsentir-svc
            port:
              number: 8081
  tls:
  - hosts:
    - redsentir.agapanto.com.co
    secretName: redsentir-com-co
